Dropdown overflowing fixed

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dropdown.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dropdown.scss
@@ -28,7 +28,7 @@
   max-height: 350px;
   min-width: 100px;
   opacity: 1;
-  overflow: auto;
+  overflow: unset;
   padding: 5px;
   position: relative;
   text-align: center;
